ingressbased/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: finox-service
spec:
  selector:
    app: finox
  type: ClusterIP
  ports:
  - name: finox-port
    port: 80
    targetPort: 80
