ingressbased/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finox
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /finox
        pathType: Prefix
        backend:
          service:
            name: finox-service
            port:
              number: 80
  - http:
      paths:
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
